--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
         "karma-sourcemap-loader": "0.3.7",
         "karma-spec-reporter": "0.0.32",
         "karma-webpack": "2.0.9",
+        "moment": "2.21.0",
         "ngtemplate-loader": "2.0.1",
         "node-sass": "4.7.2",
         "phantomjs": "2.1.7",
